favicon+about updated

--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,10 @@ url: "https://blog.darkraspberry.ga"
 github_username:  darkRaspberry
 twitter_username: devRaspberry
 
-# The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
 # will be added to all image (site avatar & posts' images) paths starting with '/'
-#
 # e.g. 'https://cdn.com'
-img_cdn: ''
+# img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
 avatar: /assets/img/favicon.png
@@ -34,14 +32,12 @@ twitter:
   username: devRaspberry
 
 social:
-# Change to your full name.
-# It will be displayed as the default author of the posts and the copyright owner in the Footer
-name: Abhay Kumar Verma
-email: insidedarkpit@gmail.com             # change to your email address
-links:
-  # The first element serves as the copyright owner's link
-  - https://twitter.com/devRaspberry      # change to your twitter homepage
-  - https://github.com/darkRaspberry       # change to your github homepage
+# Name will be displayed as the default author of the posts and the copyright owner in the Footer
+  name: Abhay Kumar Verma
+  email: insidedarkpit@gmail.com             # change to your email address
+  links:
+    - https://twitter.com/devRaspberry      # change to your twitter homepage
+    - https://github.com/darkRaspberry       # change to your github homepage
 
 
 # ------------ The following options are not recommended to be modified ------------------
