--- a/_config.yml
+++ b/_config.yml
@@ -61,8 +61,7 @@ collections:
     sort_by: order
 
 defaults:
-  -
-    scope:
+  - scope:
       path: ''          # An empty string here means all files in the project
       type: posts
     values:
